Fix CV size on mobile.

--- a/styles/banner-cv.css
+++ b/styles/banner-cv.css
@@ -77,6 +77,6 @@
 
   .banner-cv__page {
     width: 162px;
-    height: 190px;
+    height: 229px;
   }
 }
